--- a/layouts/_default/about.html
+++ b/layouts/_default/about.html
@@ -24,10 +24,10 @@
     </div>
 </div>
     <div class="grid-item">
-        <div class="grid-image aboutimg">
+        <div class="grid-image ">
          
           <a  href="{{ .Permalink }}">
-            <img src="{{ .Params.profileimage }}"></a>
+            <img class="aboutimg" src="{{ .Params.profileimage }}"></a>
         </div>
 </div>
 
