--- a/public/style.css
+++ b/public/style.css
@@ -663,9 +663,11 @@ margin-left: 0%;
         margin: 0 auto;
         }
         .icon.grid{
-         position: relative !important;
-         margin-top: 25% !important;
-     
+       /*  position: relative !important;
+         margin-top: 25% !important; */
+     height: auto !important;
+     top: 26% !important;
+     margin-top: 0px !important;
         }
 
 
