--- a/layouts/_default/about.html
+++ b/layouts/_default/about.html
@@ -8,25 +8,11 @@
    
 
   
-<div id="regular-content"> 
+<div id="regular-content about"> 
   <div class="title"><a href="{{ .RelPermalink }}">{{ .Params.title }}</a> </div>
   <div class="grid about" id="double"> 
-  <div class="grid-item">
-     <p>{{ .Content}} </p>
-    <div class="social-links"> 
-
-    <a href="mail"><a class="grey">Email:</a>darinjmb@gmail.com </a>
-  <br><br>
-    <a href="https://www.instagram.com/darinjmb/" target="_blank" rel="noopener noreferrer">Instagram </a>
-    <a href="https://www.youtube.com/@darinjmb" target="_blank" rel="noopener noreferrer">YouTube </a>
-    <a href="https://www.tiktok.com/@darinjmb?_t=8qZyZCvKFEr&_r=1" target="_blank" rel="noopener noreferrer">Tiktok </a>
-    <a href="https://www.are.na/darin-morrison-beer/channels" target="_blank" rel="noopener noreferrer">Are.na </a>
-    <a href="https://zora.co/darinjmb" target="_blank" rel="noopener noreferrer">Zora</a>
-    
-    
-    </div>
-</div>
-    <div class="grid-item">
+ 
+    <div class="grid-item about">
         <div class="grid-image ">
          
           <a  href="{{ .Permalink }}">
@@ -34,6 +20,22 @@
         </div>
 </div>
 
+
+<div class="grid-item about text">
+  <p>{{ .Content}} </p>
+ <div class="social-links"> 
+Darin Morrison-Beer
+ <a href="mail"><a class="grey">Email:</a>darinjmb@gmail.com </a>
+<br><br>
+ <a href="https://www.instagram.com/darinjmb/" target="_blank" rel="noopener noreferrer">Instagram </a><br>
+ <a href="https://www.youtube.com/@darinjmb" target="_blank" rel="noopener noreferrer">YouTube </a><br>
+ <a href="https://www.tiktok.com/@darinjmb?_t=8qZyZCvKFEr&_r=1" target="_blank" rel="noopener noreferrer">Tiktok </a><br>
+ <a href="https://www.are.na/darin-morrison-beer/channels" target="_blank" rel="noopener noreferrer">Are.na </a><br>
+ <a href="https://zora.co/darinjmb" target="_blank" rel="noopener noreferrer">Zora</a>
+ 
+ 
+ </div>
+</div>
       </div>
       
        
