about page change

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" charset="utf-8">
 <head>
+	<title>DJMB</title>
 	<link rel="stylesheet" href="/style.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
