--- a/layouts/_default/about.html
+++ b/layouts/_default/about.html
@@ -8,7 +8,7 @@
    
 
   
-<div id="regular-content about"> 
+<div id="regular-content" class="about"> 
   <div class="title"><a href="{{ .RelPermalink }}">{{ .Params.title }}</a> </div>
   <div class="grid about" id="double"> 
  
