--- a/layouts/_default/about.html
+++ b/layouts/_default/about.html
@@ -13,7 +13,7 @@
   <div class="grid about" id="double"> 
  
     <div class="grid-item about">
-        <div class="grid-image ">
+        <div class="grid-image about ">
          
           <a  href="{{ .Permalink }}">
             <img class="aboutimg" src="{{ .Params.profileimage }}"></a>
