--- a/static/style.css
+++ b/static/style.css
@@ -542,7 +542,7 @@ flex-wrap: wrap;
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 5%;
+    margin-top: 2%;
 }
 #description-block{
     width: 50%;
@@ -726,8 +726,10 @@ float: none;
         grid-gap: 14px;
         margin: 3%;
      }
-     .grid-image{
-      margin: 5%;
+     .grid-image.about{
+      margin-top: 0;
+      margin: 4%;
+      height: auto !important;
      }
      .featured-image{
       width: 100%;
@@ -751,6 +753,7 @@ float: none;
         }
         #image-block{
             width: 100%;
+            margin-top: 1%;
         }
         .video-container{
             width: 90%;
@@ -766,7 +769,9 @@ float: none;
         }
         .carousel{
             max-width: 96%;
-            margin: 5%;
+            margin-left: 3%;
+            margin-right: 3%;
+            margin-bottom: 1%;
         }
         .carousel img {
             height: auto;
