--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" charset="utf-8">
 <head>
-	<title>DJMB</title>
+	<title>djmb</title>
 	<link rel="stylesheet" href="/style.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
@@ -9,7 +9,9 @@
 	<link rel="icon" type="image/x-icon" href="/image/iconsforwebsite/32x32.png">
 </head>
 <body>
-	<div class="toprow"> <a href="/" id="gohome"> djmb </a><a id="mailicon" href="mailto:darinjmb@gmail.com"><i class="fa fa-envelope-o" ></i></a>    </div>  
+	<div class="toprow">
+		
+		<a href="/" id="gohome"> djmb </a><a id="mailicon" href="mailto:darinjmb@gmail.com"><i class="fa fa-envelope-o" ></i></a>    </div>  
 	{{ block "main" . }}
 	{{ end }}
 	<script src="/js/custom.js" async defer></script>
