--- a/static/style.css
+++ b/static/style.css
@@ -701,7 +701,7 @@ float: none;
      }
      #top-right{
         margin-left: 4%;
-        margin-top: 2.1vh;
+        margin-top: 0%;
         font-size: 1.8em;
      }
      .content{
