--- a/layouts/partials/imagecarousel.html
+++ b/layouts/partials/imagecarousel.html
@@ -6,13 +6,29 @@
     </div>
 </div>
 
+
+
+
 {{ $images := .Params.images }}
 
 {{ if and $images (gt (len $images) 0) }}
 
 <div class="carousel">
     {{ range $index, $image := $images }}
-        <img src="{{ $image.src }}" alt="{{ $image.alt }}" class="{{ if eq $index 0 }}active{{ end }}">
+    {{ $imageResource := resources.Get $image.src }}
+            {{ if $imageResource }}
+                 {{ $small := $imageResource.Fit "370x370" }}
+                 {{ $large := $imageResource.Fit "600x600" }}
+    <img src="{{ $large.Permalink }}" 
+    srcset="{{ $small.Permalink }} 370w,
+                 {{ $large.Permalink }} 600w"
+         sizes="(max-width: 600px) 370px,
+                600px"
+
+alt="{{ $image.alt }}" class="{{ if eq $index 0 }}active{{ end }}">
+
+      <!--  <img src="{{ $image.src }}" alt="{{ $image.alt }}" class="{{ if eq $index 0 }}active{{ end }}">-->
+    {{ end }}
     {{ end }}
     <div class="post-meta">
         <a class="meta-titledate">{{ .Params.Title }}, {{ .Params.Postyear }}</a><br>
@@ -32,6 +48,7 @@
 </div>
 
 {{ end }}
+
 <script>
     let currentSlide = 0;
     let currentThumbnailSet = 0;
