new changes static in config

--- a/layouts/_default/subcat.html
+++ b/layouts/_default/subcat.html
@@ -39,12 +39,13 @@
            sizes="(max-width: 600px) 150px,
                   220px"
            alt="{{ .Params.Title }}">
+          
     {{ end }}
     
 
          <!--   <img class="featured-image" src='{{.Params.FeaturedImage}}'> -->
          <div class="Post-title">{{ .Params.Title}} </div>
-         
+          <p>{{ $large.Permalink }}</p>
         </a>
     
       </div>
