--- a/layouts/_default/subcat.html
+++ b/layouts/_default/subcat.html
@@ -26,7 +26,7 @@
         <a  href="{{ .Permalink }}">
     
 
-          {{ $image := .Params.FeaturedImage }}
+          {{ $image := .Params.featuredimage }}
        
           {{ $imageResource := resources.Get $image }}
           {{ if $imageResource }}
