--- a/layouts/_default/subcat.html
+++ b/layouts/_default/subcat.html
@@ -38,7 +38,7 @@
                    {{ $large.Permalink }} 220w"
            sizes="(max-width: 600px) 150px,
                   220px"
-           alt="{{ .Params.Title }}">
+           alt="{{ .Params.Title }}" loading="lazy"> 
    
     {{ end }}
     
