--- a/public/style.css
+++ b/public/style.css
@@ -158,7 +158,7 @@ color: black;
 font-size: 1.5em;
 margin-top: 2%;
 margin-bottom: 2%;
-margin-left: 5%;
+margin-left: 4%;
 height: 4dvh;
 }
 #gohome:hover{
@@ -292,10 +292,14 @@ margin-left: 0.5%;
 .grid.about{
   flex-direction: row;
 margin-bottom: 2%;
+
 }
 .grid.about.text{
 align-items: top;
 }
+.text {
+  max-width: 50%;
+  }
 .grid-item.about{
  flex-basis: calc(100%/2);
 
@@ -326,7 +330,7 @@ nav#home a{
     color: black;
 }
 .thumbimage{
-    max-width: 15vw;
+    max-width: 13.5vw;
 
 }
 .thumbimage-wrapper {
@@ -683,10 +687,13 @@ margin-left: 0%;
   flex-direction: column;
 position: relative;
 }
-.grid-item.about.text p{
+.abouttext{
+  margin-top: 5%;
+}
+.grid-item.abouttext p{
 
   margin-left: 15%;
-margin-right: 15%;
+margin-right: 5%;
 }
 .social-links{
   margin-left: 15%;
