--- a/static/style.css
+++ b/static/style.css
@@ -648,6 +648,7 @@ color: black;
      }
      .imageandarrows{
       min-height: 50dvh;
+      width: 100%;
     }
       .grid-item.last{
       flex-basis: 100% !important;  /* Make the last item take the full width */
