--- a/public/style.css
+++ b/public/style.css
@@ -593,7 +593,7 @@ position: relative;
     }
     .regular-content{
         margin-top: 0px;
-        max-height: none;
+        max-height: 90dvh;
     }
 
     .toprow{
