--- a/layouts/partials/navigation.html
+++ b/layouts/partials/navigation.html
@@ -6,4 +6,4 @@
     <A href="{{ .Permalink }}"> {{ .Title}} </A>
 
     <br>
-    {{end}}    <a href="shopify.com">Shop</a></div>
+    {{end}}    <a href="wwww.dmb.world">Shop</a></div>
