--- a/layouts/index.html
+++ b/layouts/index.html
@@ -7,7 +7,7 @@
   <div class="icon grid">
     <div class="grid-item last drawnicon">
      
-        <a href="https://admin.shopify.com/store/715b5c/themes" target="_blank" rel="noopener noreferrer"vv class="subcategory">
+        <a href="https://dmb.world" target="_blank" rel="noopener noreferrer"vv class="subcategory">
             <div class="thumbimage-wrapper">
                 <img class="thumbimage" src="/image/sHOP_ICON.png">
                 <div class="post-count"></div>
