new, pagination error fml

--- a/layouts/_default/category.html
+++ b/layouts/_default/category.html
@@ -2,7 +2,7 @@
 
 {{ partial "navigation.html" . }}
 
-<div id="regular-content icons">
+<div id="regular-content">
   <div class="icon grid">
 
     {{ $allPosts := .Site.RegularPages }}
