--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -1,5 +1,8 @@
 <ul>
+
     {{ range .Site.Taxonomies.category }}
-    <li><a href="{{ .Page.Permalink }}">{{ .Page.Title }}</a></li>
+    <li>
+       
+        <a href="{{ .Page.Permalink }}">{{ .Page.Title }}</a></li>
     {{ end }}
 </ul>
