--- a/layouts/index.html
+++ b/layouts/index.html
@@ -52,7 +52,7 @@
 
       <div class="grid-item drawnicon">
      
-        <a href="mailto:someone@example.com" target="_blank" rel="noopener noreferrer" class="subcategory">
+        <a href="mailto:darinjmb@gmail.com" target="_blank" rel="noopener noreferrer" class="subcategory">
             <div class="thumbimage-wrapper">
                 <img class="thumbimage" src="/image/iconsforwebsite/mail_icon.png">
                 <div class="post-count"></div>
